RESOLVED FIXED218561
REGRESSION (r257839): Miscomputed style due to computed 'rem' value in matched declaration cache
https://bugs.webkit.org/show_bug.cgi?id=218561
Summary REGRESSION (r257839): Miscomputed style due to computed 'rem' value in matche...
Antti Koivisto
Reported 2020-11-04 05:42:02 PST
Call to focus() causes computed style update for the element’s ancestor chain before the the document has otherwise been styled (using the shortcut mechanism introduced in r257839). This style, which uses ‘rem’ unit and so depends on root element font size, gets cached in MatchedDeclarationsCache. The root font size then changes but during the resulting style update we use this cached value, failing to re-resolve ‘rem’.
Attachments
patch (3.95 KB, patch)
2020-11-04 05:48 PST, Antti Koivisto
no flags
Antti Koivisto
Comment 1 2020-11-04 05:42:36 PST
Antti Koivisto
Comment 2 2020-11-04 05:48:58 PST
EWS
Comment 3 2020-11-04 14:05:03 PST
Committed r269384: <https://trac.webkit.org/changeset/269384> All reviewed patches have been landed. Closing bug and clearing flags on attachment 413157 [details].
Note You need to log in before you can comment on or make changes to this bug.