Cherry-pick r269384. rdar://problem/71043200

REGRESSION (r257839): Miscomputed style due to computed 'rem' value in matched declaration cache
    https://bugs.webkit.org/show_bug.cgi?id=218561
    <rdar://problem/70074191>

    Reviewed by Zalan Bujtas.

    Source/WebCore:

    Test: fast/dom/focus-rem-style-update.html

    Call to focus() causes computed style update for the element’s ancestor chain before the the document
    has otherwise been styled (using the shortcut mechanism introduced in r257839). This style, which uses ‘rem’
    unit and so depends on root element font size, gets cached in MatchedDeclarationsCache. The root font size
    then changes but during the resulting style update we use this cached value, failing to re-resolve ‘rem’.

    * style/StyleTreeResolver.cpp:
    (WebCore::Style::TreeResolver::resolveElement):

    Invalidate matched declarations cache also when there is no existing document element style.

    LayoutTests:

    * fast/dom/focus-rem-style-update-expected.html: Added.
    * fast/dom/focus-rem-style-update.html: Added.

    Canonical link: https://commits.webkit.org/231227@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@269384 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/228499.306@safari-610.3.7.0-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-610.3.7.0-branch@269456 268f45cc-cd09-0410-ab3c-d52691b4dbfc